--- a/style.css
+++ b/style.css
@@ -42,6 +42,67 @@
     position: relative; /* Ensure relative positioning */
 }
  
+.modal-content {
+    background-color: transparent;
+    border: none;
+  }
+  
+  .modal-body {
+    text-align: center;
+    padding: 2rem;
+  }
+  
+  .modal-backdrop {
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust opacity as needed */
+  }
+
+  /* Adjust thumbnails in lightbox modal */
+#lightboxThumbnails .col-3 {
+    text-align: center;
+  }
+  
+  /* Ensure active thumbnail is highlighted */
+  .thumbnail-link {
+    display: block;
+    position: relative;
+  }
+  
+  .thumbnail-link img {
+    display: block;
+    height:50px;    
+    width: 100%;
+    height: auto;
+  }
+  
+  .thumbnail-link.active::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.3); /* Lighter overlay color */
+    border: 2px solid #007bff; /* Border color */
+    z-index: 1;
+  }
+  .carousel-inner{
+    width: 100%;
+    height: 450px; /* Adjust as needed */
+    overflow: hidden; /* Ensures anything outside the container is not visible */
+    position: relative;
+  }
+  .carousel-inner img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Makes sure the image covers the entire container */
+    object-position: 50% 50%; /* Centers the image within the container */
+    
+  }
+  .thumbnail-link.active img {
+    border: 2px solid #000;
+  }
+  
+  
 /* Active link styling */
 @media (min-width: 992px) {
     
